fixed content flash on offscreen menu

--- a/app/sass/assets/drm-sass-utilities/javascript-components/_offscreen-menu.scss
+++ b/app/sass/assets/drm-sass-utilities/javascript-components/_offscreen-menu.scss
@@ -6,8 +6,7 @@
 @mixin drm-offscreen-menu($bk-color: $main-color, $width: 15%) {
     width: $width;
     position: absolute;
-    // left: -$width;
-    left: 0;
+    left: -$width;
     height: 100%;
     background-color: $bk-color;
     z-index: 100;
